copy changes for gender [#146863201]

--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.text.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.text.haml
@@ -1,6 +1,6 @@
 = "Dear #{@profile.name},"
 
-#{@profile.owner.first_name || 'Someone'} has been gift shopping for for you on Wrapt,the new better gifting platform dedicated matching who you are, with gifts you will love - from artisanal items, memorable experiences or funds for your wish-lists in life.
+#{@profile.owner.first_name || 'Someone'} has been gift shopping for you on Wrapt, the new better gifting platform dedicated matching who you are with gifts you will love - from artisanal items, memorable experiences or funds for your wish-lists in life.
 
 #{@profile.owner.first_name || 'They'}, together with the curators from Wrapt, chose gifts for you based on answers she gave about your personality, passions and purpose in life. 
 
