--- a/app/views/home/_after_wrapper.haml
+++ b/app/views/home/_after_wrapper.haml
@@ -2,7 +2,7 @@
   .container
     .row
       .col-xs-12.col-sm-10.col-sm-offset-1
-        %h3.text-center.home__after-hero__site-description.light Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
+        %h3.text-center.home__after-hero__site-description.light Wrapt is a fun and easy way to find a gift that matches who she is, made by artisans that will inspire her.
 .container.home__after-hero
   .row
     .col-xs-12
@@ -18,7 +18,7 @@
               .about-step-number.text-center.light 1
               .text-center
                 %h4.about-step__header Give us a few basics.
-              %p.about-step__description Answer some optional questions about their personality, passions and purpose–it will help us match gifts to them better!
+              %p.about-step__description Answer some optional questions about her personality, passions and purpose–it will help us find the best gifts for her!
 
           .col-sm-4.col-xs-12
             .about-step
@@ -30,7 +30,7 @@
             .about-step
               .about-step-number.light 3
               %h4.about-step__header We send to your gift recipient, Wrapt and delivered, with love.
-              %p.about-step__description Wrapt is ready for your next gift occasion with your profiles saved with their interests, passions and favorites.
+              %p.about-step__description Wrapt is ready for your next gift occasion with your profiles saved with her interests, passions and favorites.
 
 
 .home__gift-examples
