--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -10,7 +10,7 @@
   .row
     .col-lg-8.col-lg-offset-2
       %p.home__hero-text-secondary__p.light.text-center
-        We use the science of gifting to find the best gifts for you,
+        We use the science of gifting to find the best gifts for her,
         %br
         while doing a little good in the world
 
