--- a/app/views/survey_question_responses/_survey_sections_progress_bar.html.haml
+++ b/app/views/survey_question_responses/_survey_sections_progress_bar.html.haml
@@ -18,11 +18,11 @@
   .sqr-section-label__container.clearfix
     .sqr-sections__left
       .sqr-section__label{:style => "width: 50%"}
-        .small Who are they?
+        .small Who is she?
       .sqr-section__label{:style => "width: 50%"}
-        .small Their Passions
+        .small Her Passions
     .sqr-sections__right
       .sqr-section__label{:style => "width: 50%"}
-        .small Their Personality
+        .small Her Personality
       .sqr-section__label{:style => "width: 50%"}
-        .small Their Purpose
+        .small Her Purpose
