--- a/app/views/user_activations_mailer/activation_needed_email.text.haml
+++ b/app/views/user_activations_mailer/activation_needed_email.text.haml
@@ -5,17 +5,17 @@ Thank you for signing up to try Wrapt, a way to gift better.
 
 Simply answer the questions about a woman in your life –  a girlfriend, sister, wife, daughter, mother, colleague, boss – and we will do the rest.
 
-Then, you review her gift recommendations and tell us what you think. (Don’t get too hung up on the ‘right’ answers about her – you know her better than you think you do.)
+Then, you review her gift recommendations and tell us what you think.
 
 _________________
 Here's where it gets fun.
 
-At the very end, we will ask you for her email so that she can review the gifts that were chosen for her based on your answers (this part is only for this test). We want to know if she agrees.
+At the very end, we will ask you for her email so she can review the gifts that were chosen for her based on your answers (this part is only for this test). We want to know if she agrees.
 
 _________________
 For now, we're just testing and not sending actual gifts, but your input is invaluable!
 
-So thanks for helping us out, having a little fun, and being part of something meaningful. (and even learning something about her).
+So thanks for helping us out, having a little fun, and being part of something meaningful.
 
 Try Wrapt now:
 
