additional copy edit [#146863201]

--- a/app/views/style_guides/main.haml
+++ b/app/views/style_guides/main.haml
@@ -389,7 +389,7 @@
       %p Forms are usually presented in 8 columns, with a full-width submit button.
       .mh3
         %h1.text-center
-          Great Job! We’ve got all the information we need to make gift recommendations for Melissa
+          Terrific, now we’ve got all the information we need to make gift recommendations for Melissa
     .col-xs-8.col-xs-offset-2
       %h4 Invite Melissa
       %form{"accept-charset" => "UTF-8", :action => "http://simple-form-bootstrap.plataformatec.com.br/examples/create_basic", :enctype => "multipart/form-data", :method => "post", :novalidate => "novalidate", :autocomplete => "off"}
