--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -32,7 +32,7 @@
           = simple_form_for @invitation_request, html: {class: 'sqr-form new-invite-request'} do |form|
             .form-inputs
               = form.input :email, label: 'What is your email address?', required: false
-              = form.input :how_found, label: 'How did you hear about us?', as: :radio_buttons, collection: InvitationRequest::HOW_FOUNDS, label_method: :last, value_method: :first, wrapper_html: {class: 'labels-no-bottom-margin'}
+              = form.input :how_found, as: :wrapt_radio_as_buttons, collection: InvitationRequest::HOW_FOUNDS, label: 'How did you hear about us?'
 
             .form-actions.pull-right
               = form.submit 'Submit', class: 'btn btn-primary'
@@ -44,10 +44,19 @@
   = render 'home/after_wrapper'
 
 
-
-
+- content_for :page_js do
+  :javascript
+    $(document).ready(function() {
+      console.log('hello world');
+      $('.j-radio-as-button').change(function() {
+        $('.j-radio-as-button__label').removeClass('selected');
+        var label = $(this).parents('.j-radio-as-button__label');
+        label.addClass('selected');
+      });
+    });
 
 - if params[:password_reset_token]
   - content_for :page_js do
     :javascript
       new App.PjaxModalLoader(#{password_reset_path(params[:password_reset_token]).to_json})
+      
