add extension to image url

--- a/app/views/application/_loading.haml
+++ b/app/views/application/_loading.haml
@@ -1,5 +1,5 @@
 .app-loading__container
-  = image_tag 'icons/loading'
+  = image_tag 'icons/loading.gif'
 
 = content_for :page_js do
   :javascript
