--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -11,6 +11,11 @@
     .col-xs-12
       - gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
       = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift')
+      
+      
+  %p
+    - if current_user&.unmoderated_testing_platform? || current_user&.admin?
+      = link_to "MVP1B Testing Survey", new_mvp1b_user_survey_path, class: 'btn'
 
 - content_for :page_js do
   = render '/application/carousel_js'
