--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -88,8 +88,9 @@ $gr-carousel-nav__width: 82.5px;
 
 .gr-carousel__indicators {
   position: static;
-  margin-top: 63px;
+  margin: 63px auto 24px auto;
   text-align: center;
+  width: 945px;
 }
 
 .gr-carousel__indicator {
@@ -127,16 +128,17 @@ $gr-carousel-nav__width: 82.5px;
   display: inline-block;
   width: 136px;
   height: 90px;
-  margin-right: 22px;
+  margin-right: 18px;
+  margin-bottom: 12px;
   text-align: center;
   position: relative;
   overflow: hidden;
 }
 
-.gr-carousel__indicator:last-child .gr-carousel__thumbnail {
+.gr-carousel__indicator:last-child .gr__indicator-thumbnail,
+.gr-carousel__indicator:nth-child(6) .gr__indicator-thumbnail {
   margin-right: 0;
 }
-
 .gr-carousel__indicator img {
   width: 100%;
   vertical-align: top;
