--- a/app/views/mvp1b_user_surveys/show.haml
+++ b/app/views/mvp1b_user_surveys/show.haml
@@ -1,6 +1,10 @@
 .container
   .row
-    .col-xs-12
-      %h1 That's all folks
+    .col-md-8.col-md-offset-2
+      %h1.tan-002.ph2.text-center
+        Thank you!
       
-      %p Thanks for being a playa!
+      %p.text-center.tan-002.lead
+        We appreciate your time.
+        %br
+        We'll be back in touch when we launch.
