--- a/app/views/mvp1b_user_surveys/new.haml
+++ b/app/views/mvp1b_user_surveys/new.haml
@@ -1,47 +1,58 @@
 .container
   .row
     .col-xs-12
-      %h1 Self-moderated testing questions
-      
+      %h1.tan-002.ph2.text-center
+        Thank you for participating in this evaluation of Wrapt!
+         
+      %p.lead.tan-002.text-center
+        Your participation & feedback will directly impact the success of Wrapt and help to support our mission to increase connectedness and love between people by helping them to give better, more meaningful gifts.
+    .col-md-8.col-md-offset-2
+      %p 
+        We'd like to send you a gift to show our appreciation for your time. We'll ask your mailing address at the end--totally optional and we won't share or use your address for anything else!
+
+  .row
+    .col-md-10.col-md-offset-1
       = simple_form_for [@survey] do |form|
       
-        %p 1. What's your age?
-        %p= form.input_field :age, as: :radio_buttons, collection: ['< 20', '20 - 29', '30 - 39']
+        %ol.mvp1b-user-surveys__questions
+          %li 
+            First a couple of questions about you... What age group are you in?
+            = form.input_field :age, as: :radio_buttons, collection: ['< 20', '20 - 29', '30 - 39', '40 - 49', '50 - 59', '60 - 69', '70+']
+        
+          %li 
+            What is your gender?
+            = form.input_field :gender, as: :radio_buttons, collection: ['Male', 'Female', 'Other']
+
+          %li 
+            What is your zip code?
+            = form.input_field :zip, class: 'input-small'
       
-        %p 2. What's your gender?
-        %p= form.input_field :gender, as: :radio_buttons, collection: ['Male', 'Female', 'Other']
+          %li 
+            How confident do you feel about your responses to the quiz?
+            = form.input_field :response_confidence, as: :radio_buttons, collection: ['Very confident', 'Confident', 'Skeptical', 'Very Skeptical']
 
-        %p 3. What's your zip code?
-        %p= form.input_field :zip
-      
-        %p 4. Response confidence?
-        %p= form.input_field :response_confidence, as: :radio_buttons, collection: ['Very confident', 'Confident', 'Skeptical']
+          %li 
+            How confident do you feel that the software made good gift recommendations (things she will like)?
+            = form.input_field :recommendation_confidence, as: :radio_buttons, collection: ['Very confident', 'Confident', 'Skeptical', 'Very Skeptical']
 
-        %p 5. Recommendation confidence?
-        %p= form.input_field :recommendation_confidence, as: :radio_buttons, collection: ['Very confident', 'Confident', 'Skeptical']
+          %li 
+            Either way&hellip;why?
+            = form.input_field :recommendation_comment
 
-        %p 6. Recommendation comments?
-        %p= form.input_field :recommendation_comment
+          %li 
+            How likely would you be to use this site again on your own?
+            = form.input_field :would_use_again, as: :radio_buttons, collection: ['Very likely', 'Likely', 'Unlikely']
 
-        %p 7. Would use again?
-        %p= form.input_field :would_use_again, as: :radio_buttons, collection: ['Very likely', 'Likely', 'Unlikely']
+          %li 
+            How likely would you be to use this site for yourself to create a wish list to share with friends & family, or purchase items?
+            = form.input_field :would_tell_friend, as: :radio_buttons, collection: ['Very likely', 'Likely', 'Unlikely']
 
-        %p 8. Would tell friend?
-        %p= form.input_field :would_tell_friend, as: :radio_buttons, collection: ['Very likely', 'Likely', 'Unlikely']
+          %li 
+            Would you use Wrapt to notify you of her upcoming gift occasions such as her birthday, anniversary or other important dates? Once you take her quiz and get recommendations, we send you reminders or gifts that match her based on your initial quiz - would this interest you?
+            = form.input_field :other_services
 
-        %p 9. Would create wish list?
-        %p= form.input_field :would_create_wish_list, as: :radio_buttons, collection: ['Very likely', 'Likely', 'Unlikely']
-
-        %p 10. Would pay?
-        %p= form.input_field :would_pay, as: :radio_buttons, collection: ['Yes', 'No']
-
-        %p 11. Pay comment?
-        %p= form.input_field :pay_comment
-
-        %p 12. Other Services?
-        %p= form.input_field :other_services
-
-        %p 13. Mailing Address?
-        %p= form.input_field :mailing_address
-
-        %p= form.submit 'Save', class: 'btn btn-primary'
+          %li 
+            We'd like to show our appreciation for your time with a small gift from Wrapt--please tell us your mailing address if you're interested. (We won't share your mailing address or use it for anything other than sending this gift!)
+            = form.input_field :mailing_address
+        .action.text-center
+          = form.submit 'SAVE', class: 'btn btn-primary'
