--- a/app/views/user_activations_mailer/activation_needed_unmoderated_testing_platform.text.haml
+++ b/app/views/user_activations_mailer/activation_needed_unmoderated_testing_platform.text.haml
@@ -6,9 +6,11 @@ You have been invited as part of a small inner circle of friends and family, to 
 
 At Wrapt, we use the science of gifting and gratitude to help you get better gifts for the women (wives, daughters, friends, moms) in your life. 
 
-What makes our gifts better? For one, we created a tool that uses technology to match who she is (personality, passions and purpose), to gifts in our collection. But then, we dug into what women want – turns out they want experiences so they feel closer, they prefer handmade and artisanal gifts, and they like practical things – contributions to causes they care about, or a group-funded idea like a bucket list trip, a home project or something they will use – dinner out, a spa trip - you get the idea. And now, Wrapt is (almost) here to help you make it happen.
+What makes our gifts better? 
 
-We chose you to help us test it out, because you’re that kind of guy (or gal).
+For one, we created a tool that uses technology to match who she is (personality, passions and purpose), to gifts in our collection. We also learned that women prefer handmade and artisanal gifts as well as gifts with impact like the stories behind the Makers of our gifts.
+
+So, Wrapt is almost ready as your own personal ‘gift whisperer’ to help you with gift occasions throughout the year. We chose you to help us test it out, because you’re our friend (or family member), have great style, and want to help with brands that do good in the world.
 _________________
 All you have to do is:
 * Imagine a woman you need a gift for, 
@@ -17,7 +19,7 @@ All you have to do is:
 * Let us know what you think.
 
 _________________
-There’s no buying at this stage, we just want you to test-drive our site, let us know how it worked for you and share it with her so she can weigh in. Simple. 
+There’s no buying at this stage, we just want you to test-drive our site, let us know how it worked for you and share it with her so she can weigh in on the choices.  Simple. 
 
 We thank you in advance, (and so will she).
 
