--- a/app/views/user_activations_mailer/activation_needed_unmoderated_testing_platform.text.haml
+++ b/app/views/user_activations_mailer/activation_needed_unmoderated_testing_platform.text.haml
@@ -8,14 +8,14 @@ At Wrapt, we use the science of gifting and gratitude to help you get better gif
 
 What makes our gifts better? 
 
-For one, we created a tool that uses technology to match who she is (personality, passions and purpose), to gifts in our collection. We also learned that women prefer handmade and artisanal gifts as well as gifts with impact like the stories behind the Makers of our gifts.
+For one, we created a tool that uses technology to match who she is (personality, passions and purpose), to gifts in our collection that she will love. We also learned that women prefer handmade and artisanal gifts that have inspirations stories of impact behind them.
 
-So, Wrapt is almost ready as your own personal ‘gift whisperer’ to help you with gift occasions throughout the year. We chose you to help us test it out, because you’re our friend (or family member), have great style, and want to help with brands that do good in the world.
+Now that Wrapt is almost ready as your own personal ‘gift whisperer’ to help you with gift occasions throughout the year, we need your help. We chose you to help us test it out, because you’re our friend (or family member), have great style, and want to help with brands that do good in the world.
 _________________
 All you have to do is:
 * Imagine a woman you need a gift for, 
 * Answer a few questions about her,
-* View the gifts we curated for her, and
+* View the gifts we curated for her, share those gifts with her to get her opinion, and
 * Let us know what you think.
 
 _________________
