[#147209039] animate gift better

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -3,8 +3,18 @@
     .row
       .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
         %h1.light.text-center
-          Gift Better.
-          %br
+          .rotate-words__sentence
+            %span Gift
+            .rotate-words__container 
+              %span Better.
+              %span Kindness.
+              %span Peace.
+              %span Compassion.
+              %span Understanding.
+              %span Generosity.
+              %span Gratitude.
+              %span Empathy.
+              %span Love.
           Gift Wrapt.
 .container.home__hero-text-secondary
   .row
