--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -3,6 +3,44 @@
 
 @import "helpers";
 
+.rotate-words__container {
+  display: inline-block;
+  overflow: hiddne;
+  vertical-align: top;
+  width: 176px;
+  height: 1.2em;
+  position: relative;
+  span {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    opacity: 0;
+    overflow: hidden;
+    animation: rotateWords 27s infinite 0s;
+  }
+  @for $i from 2 through 9 {
+    span:nth-child(#{$i}) {
+      $delay: ($i - 1) * 3;
+      animation-delay: #{$delay}s;
+    }
+  }
+}
+
+@keyframes rotateWords {
+  0% { opacity: 0;}
+  8% { opacity: 1;}
+  15% { opacity: 0;}
+  25% { opacity: 0;}
+  100% { opacity: 0;}
+}
+@-webkit-keyframes rotateWords {
+  0% { opacity: 0;}
+  8% { opacity: 1;}
+  15% { opacity: 0;}
+  25% { opacity: 0;}
+  100% { opacity: 0;}
+}
+
 .home__hero {
   background-image: image-url('hero-image');
   background-size: 100vw;
