--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -8,9 +8,13 @@
       .recommendations-intro__next-step
         %ol
           %li
-            Add those items to the basket that you would purchase if Wrapt was fulilling orders at this time. Rate the others (like/dislike) for future occasions: we’ll keep them in your account. 
+            Add items to the basket that you would purchase if Wrapt was fulfilling orders at this time. 
           %li
-            Once you've reviewed the gifts, please 
+            Rate the others (like/dislike) for future occasions: we’ll keep them in your account.
+          %li
+            Open the Gift Basket, and share the gift recommendations you chose with your giftee (if you’re willing, of course. It will really help us to learn).
+          %li
+            Once you've reviewed the gifts, simply 
             = succeed "." do
               = link_to "answer a few questions about Wrapt", new_mvp1b_user_survey_path, class: 'link--white-on-blue'
   .row.wrapt-carousel--wrapper
