home page copy edit

--- a/app/views/home/_after_wrapper.haml
+++ b/app/views/home/_after_wrapper.haml
@@ -56,7 +56,7 @@
     = image_tag "gift-example__earrings.jpg"
     .flyover.bottom
       %p.home__flyover-description
-        Hand made by artisan jeweler Kristin Ford, who combines precious stones with metals to make meaning.
+        Hand made by artisan jeweler, combining precious stones with metals to make meaning and beauty.
 
 .text-center
   = embedded_svg('icon-gift-better-gift-wrapt', class: "landing-bottom__icon-gift-better-gift-wrapt mv5")
