--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -11,7 +11,7 @@
           %li
             Add to basket what you could imagine buying, like/dislike the rest. 
           %li
-            Share our recommendations with your giftee (see button in basket)
+            = link_to 'Share our recommendations with your giftee', new_profile_giftee_invitation_path(@profile), data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}, onClick: "ga('send', 'event', 'basket', 'share with giftee', 'step 1 - button');"
           %li
             = link_to "Answer a few questions", new_mvp1b_user_survey_path
   .row.wrapt-carousel--wrapper
