--- a/app/views/admin/report_base/_most_selected.haml
+++ b/app/views/admin/report_base/_most_selected.haml
@@ -5,7 +5,10 @@
       %tr
         %th 
         %th Gift
-        %th.text-align-right Occurrences
+        %th.text-align-right Selected
+        %th.text-align-right Avg Position
+        %th.text-align-right Avg Score
+        %th.text-align-right Recommended
     %tbody
       - @report.most_selected_gifts.each_with_index do |row, index|
         - gift = @report.preloaded_gifts[row['gift_id']]
@@ -14,5 +17,8 @@
           %td.text-align-right= index + 1
           %td '#{truncate(gift.title, length: 60)}' (#{gift.wrapt_sku})
           %td.text-align-right= row['selection_count']
+          %td.text-align-right= number_with_precision(row['avg_position'], precision: 2)
+          %td.text-align-right= number_with_precision(row['avg_score'], precision: 2)
+          %td.text-align-right= row['recommendation_count']
 - else
   %p No gift selections found.
