--- a/app/views/admin/top_gifts_reports/index.haml
+++ b/app/views/admin/top_gifts_reports/index.haml
@@ -2,6 +2,10 @@
 
 = render 'date_range_picker'
 
+.panel.panel-default
+  .panel-body
+    NOTE: Internal users removed from data
+
 = render 'most_recommended'
 %hr
 = render 'most_selected'
