--- a/app/views/admin/report_base/_report_nav.haml
+++ b/app/views/admin/report_base/_report_nav.haml
@@ -8,6 +8,7 @@
   buttons << {label: "Activity Report", url: admin_reports_path, name: 'activity_report'}
   buttons << {label: "MVP-1b Survey Report", url: admin_mvp1b_user_surveys_path, name: 'mvp1b_survey_report'}
   buttons << {label: "Top Gifts", url: admin_top_gifts_reports_path, name: 'top_gifts_report'}
+  buttons << {label: "Response Summary", url: admin_survey_response_reports_path, name: 'survey_response_report'}
 
 .row.admin__actions
   .col-sm-12
