--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -17,8 +17,8 @@
         Instead, we'd like to share the gifts Wrapt recommended with your #{@profile.relationship&.downcase}, and ask which ones #{@profile.name} would like or not like. If you're up for having us email her, please click the button below and provide her email address. Thank you!
       
 
-      = link_to 'SEND GIFT SELECTION NOTIFICATION', new_profile_giftee_invitation_path(profile), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}, onClick: "ga('send', 'event', 'basket', 'share with giftee', 'step 1 - button');"
-
+      -#= link_to 'SEND GIFT SELECTION NOTIFICATION', new_profile_giftee_invitation_path(profile), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}, onClick: "ga('send', 'event', 'basket', 'share with giftee', 'step 1 - button');"
+      = link_to 'CHECK OUT', '#', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
 
       
 
